Se crea en la página de portafilio las cards de los productos

--- a/portafolio.html
+++ b/portafolio.html
@@ -57,42 +57,231 @@
     />
 
     <div class="parallaxPortafolio">
-      <img class="logoPortafolio" src="Logo.png"/>
+      <img class="logoPortafolio" src="Logo.png" />
     </div>
 
     <!--Menu-->
 
     <nav class="menu">
-      <a href="index.html" style="text-decoration: none">Inicio</a>
-      <a href="index.html#quienesSomos" style="text-decoration: none">Quiénes somos</a>
-      <a href="index.html#nuestrosValores" style="text-decoration: none"
+      <a href="index.html" style="text-decoration: none;">Inicio</a>
+      <a href="index.html#quienesSomos" style="text-decoration: none;"
+        >Quiénes somos</a
+      >
+      <a href="index.html#nuestrosValores" style="text-decoration: none;"
         >Nuestros Valores</a
       >
-      <a href="index.html#testimonios" style="text-decoration: none">Testimonios</a>
-      <a
-        href="portafolio.html"
-        style="text-decoration: none"
-        >Portafolio</a
+      <a href="index.html#testimonios" style="text-decoration: none;"
+        >Testimonios</a
       >
-      <a href="index.html#contact" style="text-decoration: none">Contactenos</a>
+      <a href="portafolio.html" style="text-decoration: none;">Portafolio</a>
+      <a href="index.html#contact" style="text-decoration: none;"
+        >Contactenos</a
+      >
     </nav>
 
     <nav class="sidenav sidenav-close" id="mobile-demo">
-      <a href="index.html" style="text-decoration: none">Inicio</a>
-      <a href="index.html#quienesSomos" style="text-decoration: none">Quiénes somos</a>
-      <a href="index.html#nuestrosValores" style="text-decoration: none"
+      <a href="index.html" style="text-decoration: none;">Inicio</a>
+      <a href="index.html#quienesSomos" style="text-decoration: none;"
+        >Quiénes somos</a
+      >
+      <a href="index.html#nuestrosValores" style="text-decoration: none;"
         >Nuestros Valores</a
       >
-      <a href="index.html#testimonios" style="text-decoration: none">Testimonios</a>
-      <a
-        href="portafolio.html"
-        style="text-decoration: none"
-        >Portafolio</a
+      <a href="index.html#testimonios" style="text-decoration: none;"
+        >Testimonios</a
       >
-      <a href="index.html#contact" style="text-decoration: none">Contactenos</a>
+      <a href="portafolio.html" style="text-decoration: none;">Portafolio</a>
+      <a href="index.html#contact" style="text-decoration: none;"
+        >Contactenos</a
+      >
     </nav>
 
-    
+    <!---------------------------------------------------------------------------------->
+    <!----------------------------------Portafolio-------------------------------------->
+    <!---------------------------------------------------------------------------------->
+    <div class="portafolio">
+      <h4>Portafolio</h4>
+      <div class="portafolioContainer">
+        <div class="elemento">
+          <img class="imageFolio" src="./img/portafolio/mora.png" alt="" />
+          <div class="textFolio">
+            <h5 class="titleFolio">Mora</h5>
+            <ul class="text">
+              <li>Fruta troceada de mora</li>
+              <li>Pulpa de mora sin azucar</li>
+              <li>Pulpa de mora azucarada</li>
+            </ul>
+            <p class="text">
+              Presentaciones en empaque de polipropileno de 100 a 5000 gramos o
+              a necesidad del cliente.
+            </p>
+          </div>
+        </div>
+
+        <div class="elemento">
+          <img class="imageFolio" src="./img/portafolio/fresa.png" alt="" />
+          <div class="textFolio">
+            <h5 class="titleFolio">Fresa</h5>
+            <ul class="text">
+              <li>Fruta troceada de fresa</li>
+              <li>Pulpa de fresa sin azucar</li>
+              <li>Pulpa de fresa azucarada</li>
+            </ul>
+            <p class="text">
+              Presentaciones en empaque de polipropileno de 100 a 5000 gramos o
+              a necesidad del cliente.
+            </p>
+          </div>
+        </div>
+
+        <div class="elemento">
+          <img class="imageFolio" src="./img/portafolio/piña.png" alt="" />
+          <div class="textFolio">
+            <h5 class="titleFolio">Piña</h5>
+            <ul class="text">
+              <li>Fruta troceada de piña</li>
+              <li>Pulpa de piña sin azucar</li>
+              <li>Pulpa de piña azucarada</li>
+            </ul>
+            <p class="text">
+              Presentaciones en empaque de polipropileno de 100 a 5000 gramos o
+              a necesidad del cliente.
+            </p>
+          </div>
+        </div>
+
+        <div class="elemento">
+          <img class="imageFolio" src="./img/portafolio/mango.png" alt="" />
+          <div class="textFolio">
+            <h5 class="titleFolio">Mango</h5>
+            <ul class="text">
+              <li>Fruta troceada de mango</li>
+              <li>Pulpa de mango sin azucar</li>
+              <li>Pulpa de mango azucarada</li>
+            </ul>
+            <p class="text">
+              Presentaciones en empaque de polipropileno de 100 a 5000 gramos o
+              a necesidad del cliente.
+            </p>
+          </div>
+        </div>
+
+        <div class="elemento">
+          <img class="imageFolio" src="./img/portafolio/guanabana.png" alt="" />
+          <div class="textFolio">
+            <h5 class="titleFolio">Guanabana</h5>
+            <ul class="text">
+              <li>Fruta troceada de guanabana</li>
+              <li>Pulpa de guanabana sin azucar</li>
+              <li>Pulpa de guanabana azucarada</li>
+            </ul>
+            <p class="text">
+              Presentaciones en empaque de polipropileno de 100 a 5000 gramos o
+              a necesidad del cliente.
+            </p>
+          </div>
+        </div>
+
+        <div class="elemento">
+          <img class="imageFolio" src="./img/portafolio/tomate.png" alt="" />
+          <div class="textFolio">
+            <h5 class="titleFolio">Tomate arbol</h5>
+            <ul class="text">
+              <li>Fruta troceada de tomate</li>
+              <li>Pulpa de tomate sin azucar</li>
+              <li>Pulpa de tomate azucarada</li>
+            </ul>
+            <p class="text">
+              Presentaciones en empaque de polipropileno de 100 a 5000 gramos o
+              a necesidad del cliente.
+            </p>
+          </div>
+        </div>
+
+        <div class="elemento">
+          <img class="imageFolio" src="./img/portafolio/guayaba.png" alt="" />
+          <div class="textFolio">
+            <h5 class="titleFolio">Guayaba</h5>
+            <ul class="text">
+              <li>Fruta troceada de guayaba</li>
+              <li>Pulpa de guayaba sin azucar</li>
+              <li>Pulpa de guayaba azucarada</li>
+            </ul>
+            <p class="text">
+              Presentaciones en empaque de polipropileno de 100 a 5000 gramos o
+              a necesidad del cliente.
+            </p>
+          </div>
+        </div>
+
+        <div class="elemento">
+          <img class="imageFolio" src="./img/portafolio/maracuya.png" alt="" />
+          <div class="textFolio">
+            <h5 class="titleFolio">Maracuyá</h5>
+            <ul class="text">
+              <li>Fruta troceada de maracuyá</li>
+              <li>Pulpa de maracuyá sin azucar</li>
+              <li>Pulpa de maracuyá azucarada</li>
+            </ul>
+            <p class="text">
+              Presentaciones en empaque de polipropileno de 100 a 5000 gramos o
+              a necesidad del cliente.
+            </p>
+          </div>
+        </div>
+
+        <div class="elemento">
+          <img class="imageFolio" src="./img/portafolio/lulo.png" alt="" />
+          <div class="textFolio">
+            <h5 class="titleFolio">Lulo</h5>
+            <ul class="text">
+              <li>Fruta troceada de lulo</li>
+              <li>Pulpa de lulo sin azucar</li>
+              <li>Pulpa de lulo azucarada</li>
+            </ul>
+            <p class="text">
+              Presentaciones en empaque de polipropileno de 100 a 5000 gramos o
+              a necesidad del cliente.
+            </p>
+          </div>
+        </div>
+
+        <div class="elemento">
+          <img class="imageFolio" src="./img/portafolio/uva.png" alt="" />
+          <div class="textFolio">
+            <h5 class="titleFolio">Uva isabella</h5>
+            <ul class="text">
+              <li>Fruta troceada de uva isabella</li>
+              <li>Pulpa de uva isabella sin azucar</li>
+              <li>Pulpa de uva isabella azucarada</li>
+            </ul>
+            <p class="text">
+              Presentaciones en empaque de polipropileno de 100 a 5000 gramos o
+              a necesidad del cliente.
+            </p>
+          </div>
+        </div>
+
+        <div class="elemento">
+          <img class="imageFolio" src="./img/portafolio/mandariana.png" alt="" />
+          <div class="textFolio">
+            <h5 class="titleFolio">Mandarina</h5>
+            <ul class="text">
+              <li>Fruta troceada de mandarina</li>
+              <li>Pulpa de mandarina sin azucar</li>
+              <li>Pulpa de mandarina azucarada</li>
+            </ul>
+            <p class="text">
+              Presentaciones en empaque de polipropileno de 100 a 5000 gramos o
+              a necesidad del cliente.
+            </p>
+          </div>
+        </div>
+
+
+
+      </div>
+    </div>
 
     <!---------------------------------------------------------------------------------->
     <!----------------------------------Footer---------------------------------------->
