el enlace de boton de descarga del portafolio le agrega el atributo download

--- a/portafolio.html
+++ b/portafolio.html
@@ -101,7 +101,7 @@
     <!---------------------------------------------------------------------------------->
     <div class="portafolio">
       <h4>Portafolio</h4>
-      <div class="descargar"><a class="waves-effect waves-light btn amber waves-effect waves-light" href="./archivos/Portafolio-Natural-Troci.pdf.pdf" target="_blank">Descargar portafolio</a></div>
+      <div class="descargar"><a class="waves-effect waves-light btn amber waves-effect waves-light" href="./archivos/Portafolio-Natural-Troci.pdf.pdf" target="_blank" download="PortafolioNaturalTroci">Descargar portafolio</a></div>
       <div class="portafolioContainer">
         <div class="elemento">
           <img class="imageFolio" src="./img/portafolio/mora.png" alt="" />
@@ -281,7 +281,7 @@
 
 
       </div>
-      <div class="descargar"><a class="waves-effect waves-light btn amber waves-effect waves-light" href="./archivos/Portafolio-Natural-Troci.pdf.pdf" target="_blank">Descargar portafolio</a></div>
+      <div class="descargar"><a class="waves-effect waves-light btn amber waves-effect waves-light" href="./archivos/Portafolio-Natural-Troci.pdf.pdf" target="_blank" download="PortafolioNaturalTroci">Descargar portafolio</a></div>
     </div>
 
     <!---------------------------------------------------------------------------------->
