--- a/index.html
+++ b/index.html
@@ -164,9 +164,9 @@
       <div class="testimonios">
         <h4>Testimonios</h4>
         <div class="carousel">
-          <div class="carousel-item"><img src="img/testimonio.png" /></div>
-          <div class="carousel-item"><img src="img/testimonio.png" /></div>
-          <div class="carousel-item"><img src="img/testimonio.png" /></div>
+          <div class="carousel-item"><img src="./img/testimonios/ErikaMartinez.png" /></div>
+          <div class="carousel-item"><img src="./img/testimonios/MilenaHernanez.png" /></div>
+          <div class="carousel-item"><img src="./img/testimonios/SaraPiedrahita.png" /></div>
           <div class="carousel-item"><img src="img/testimonio.png" /></div>
         </div>
       </div>
