--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
           <div class="carousel-item"><img src="./img/testimonios/ErikaMartinez.png" /></div>
           <div class="carousel-item"><img src="./img/testimonios/MilenaHernanez.png" /></div>
           <div class="carousel-item"><img src="./img/testimonios/SaraPiedrahita.png" /></div>
-          <div class="carousel-item"><img src="img/testimonio.png" /></div>
+          <div class="carousel-item"><img src="./img/testimonios/CarlosPineda.png" /></div>
         </div>
       </div>
     </div>
