--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@
           <div class="carousel-item"><img src="./img/testimonios/MilenaHernanez.png" /></div>
           <div class="carousel-item"><img src="./img/testimonios/SaraPiedrahita.png" /></div>
           <div class="carousel-item"><img src="./img/testimonios/CarlosPineda.png" /></div>
+          <div class="carousel-item"><img src="./img/testimonios/SantiagoZapata.png" /></div>
         </div>
       </div>
     </div>
